--- a/Python/Django/week-4/kyc/theme/static_src/package.json
+++ b/Python/Django/week-4/kyc/theme/static_src/package.json
@@ -9,6 +9,7 @@
     "build:tailwind": "cross-env NODE_ENV=production tailwindcss --postcss -i ./src/styles.css -o ../static/css/dist/styles.css --minify",
     "dev": "cross-env NODE_ENV=development tailwindcss --postcss -i ./src/styles.css -o ../static/css/dist/styles.css -w",
     "tailwindcss": "node ./node_modules/tailwindcss/lib/cli.js"
+    
   },
   "keywords": [],
   "author": "",
@@ -24,5 +25,8 @@
     "postcss-simple-vars": "^7.0.1",
     "rimraf": "^5.0.5",
     "tailwindcss": "^3.4.0"
+  },
+  "dependencies": {
+    "daisyui": "^4.12.10"
   }
 }
